<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. Aplicación desarrollada por Kevin Alejandro Hernández Rodríguez.
  ~ Ingeniero de sistemas - Universidad de Ibagué - Colombia
  ~ E-Mail: kevin.hernandezr8@gmail.com
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_anchorGravity="center"
    tools:context=".OcupacionTaxiActivity">

    <TextView
        android:id="@+id/textView41"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/horario"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtHorario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/btnHoraTaxi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@color/btnHora"
            android:scaleType="center"
            app:srcCompat="@android:drawable/ic_menu_recent_history" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nivelOcupacion"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupOcupacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ocupacion0" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ocupacion1" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ocupacion2" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ocupacion3" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ocupacion4" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView42"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRegistroTaxi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:text="@string/registar"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>